test/spec/labels.txt
;;; TODO: rebase when testsuite repo updates to br_table
;;; ERROR: 1
;;; EXE: test/run-d8.py
;;; FLAGS: --spec
;;; STDIN_FILE: third_party/testsuite/labels.wast
(;; STDERR ;;;
third_party/testsuite/labels.wast:109:10: unexpected token "tableswitch"
        (tableswitch $exit (get_local 0)
         ^^^^^^^^^^^
third_party/testsuite/labels.wast:109:22: syntax error, unexpected VAR
        (tableswitch $exit (get_local 0)
                     ^^^^^

;;; STDERR ;;)
